Radius bleeding fix

--- a/src/Pages/Home/SubscribeWidget/SubscribeWidget.css
+++ b/src/Pages/Home/SubscribeWidget/SubscribeWidget.css
@@ -29,7 +29,7 @@
 .subscribe-input-wrap{
     display: flex;
     background-color: #ffffff;
-    border-radius: 20px;
+    border-radius: 30px;
     justify-content: space-between;
 }
 .subscribe-input-wrap .email-text{
